# kata_bst_client_server

./: CMakeLists.txt  README.md
LizardFS_deb_pck/: lizardfs-cgi_0.0.0-20230701-221439-devel_amd64.deb  lizardfs-cgiserv_0.0.0-20230701-221439-devel_amd64.deb
src/: CMakeLists.txt  client  client.cpp  client.h  server  server.cpp  server.h
test/: CMakeLists.txt  client_test.cpp  server_test.cpp
